[FIX] sap.m.ActionSheet: Control is now rendered correctly on mobile
- The CSS styles of sap.m.ActionSheet are updated, in order for the 
control to be fully visible on mobile devices.

BCP: 0020751294 0000336880 2020
BCP: 2080072543
Fixes https://github.com/SAP/openui5/issues/2804
CR-Id: 002075125900001268592020

--- a/src/sap.m/src/sap/m/themes/base/ActionSheet.less
+++ b/src/sap.m/src/sap/m/themes/base/ActionSheet.less
@@ -4,15 +4,13 @@
 /* ================================== */
 
 .sapMActionSheetDialog.sapMDialog {
-	-webkit-transform: translate(-50%, 0);
-	transform: translate(-50%, 0);
 	top: auto !important; // We need to overwrite the inline top style
 	bottom: 0;
 	width: 100%;
 	max-width: 20rem;
 	border-radius: 0.25rem 0.25rem 0 0;
 
-	&.sapMDialogPhone{
+	&.sapMDialogPhone {
 		overflow: visible;
 	}
 }
